# sprongle

./: .gitignore  .markdownlint.json  404.html  CNAME  README.md  index.html  pyproject.toml
.github/workflows/: ci.yml
assets/: README.md  styles.scss
documentation_src/: mkdocs.yml
documentation_src/docs/: index.md
documentation_src/docs/oxphys_numerics/: getting_started.md  introduction.md
documentation_src/docs/oxphys_numerics/rust_api/: getting_started.md
documentation_src/docs/teaching/b2/: problem_set_2.md  problem_set_3.md  problem_set_4.md
documentation_src/docs/teaching/b6/: problem_set_1.md  problem_set_2.md
documentation_src/overrides/partials/: comments.html
oxphys_numerics/getting_started/: index.html
oxphys_numerics/introduction/: index.html
oxphys_numerics/rust_api/getting_started/: index.html
oxphys_numerics/rust_api/introduction/: index.html
pages/: home.md
pages/Research/: home.md
pages/physics/: home.md
pages/physics/B2: Symmetry and relativity/: Problem set 2.md  Problem set 3.md
pages/physics/B6: Condensed matter physics/: Problem set 2.md  Problem set 3.md
search/: search_index.json
src/sprongle/: __init__.py  _markdown_page.py  _page_builder.py  _sprongle_page.py  color.py  config.py  main.py  scss_utils.py  style.py  types.py  utils.py
src/sprongle/components/: __init__.py  _admonition.py  _dark_mode_toggle.py  _dropdown_reference.py  _footer.py  _github_link.py  _header.py  _header_button.py  _hover_reference.py  _left_drawer.py  _menu.py  _menu_expansion_item.py  _menu_header.py  _menu_item.py  _page.py  _right_drawer.py  _text.py  _title.py
src/sprongle/pages/: __init__.py  home.py
src/sprongle/pages/physics/: __init__.py  home.py
src/sprongle/pages/physics/b2/: __init__.py  problem_set_2.py  problem_set_3.py  problem_set_4.py
src/sprongle/pages/physics/b6/: __init__.py  problem_set_2.py
src/sprongle/pages/research/: __init__.py  home.py
static/: styles.css
teaching/b2/problem_set_2/: index.html
teaching/b2/problem_set_3/: index.html
teaching/b2/problem_set_4/: index.html
teaching/b6/problem_set_1/: index.html
teaching/b6/problem_set_2/: index.html
