[project]
name = "sprongle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Richard Brearton", email = "richardbrearton@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.5",
    "latex2mathml>=3.77.0",
    "libsass>=0.23.0",
    "nicegui>=2.5.0",
    "pydantic-settings>=2.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 80

[tool.ruff.lint]
ignore = ["PLR0913", "SIM117", "COM812", "T201", "D413", "PD901"]
select = ["ALL"]
unfixable = [
    "F401", # Ignore unused imports.
]

[project.scripts]
sprongle = "sprongle.main:main"

[tool.ruff.lint.per-file-ignores]
"src/sprongle/pages/**.py" = ["E501"]
